--- a/as1.html
+++ b/as1.html
@@ -133,7 +133,7 @@
 
       <div id="secondPart">
         <div>
-          <p>Welcome to Winter Buddy</p>
+          <h4>Winter made easy with Winter Buddy.</h4>
           <h1>Sign up</h1>
           <p>Enter your username or email address</p>
           <input type="email" id="input1" />
