--- a/success.html
+++ b/success.html
@@ -120,6 +120,12 @@
         font-size: 80px;
         color: rgb(37, 23, 5);
       }
+      .trigger-btn {
+        text-decoration: none;
+      }
+      .trigger-btn:hover {
+        text-decoration: none;
+      }
     </style>
   </head>
   <body>
@@ -144,7 +150,7 @@
     <div class="text-center">
       <!-- Button HTML (to Trigger Modal) -->
       <a href="#myModal" class="trigger-btn" data-toggle="modal"
-        >Order Details
+        >Order Success
       </a>
       <br />
       <a href="./index.html" id="index">Continue Shopping</a>
