--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         return a.price - b.price;
       });
 
-      // *************Filtering wth their PRICE RANGE Inside FIlter Fucntion****************
+      // *************Filtering wth their PRICE RANGE Inside FIlter Function****************
       let checkboxes = document.querySelectorAll('input[name="price"]');
 
       // Add an event listener to each checkbox
